# PurePythonProjectScaffold

./: .flake8  .style.yapf  Makefile  README.md  mypy.ini  pyproject.toml
demo_cli/: main.py
demo_cli/models/: lecturer.py  student.py
source/: conf.py  index.rst  installation.rst  usage.rst
tests/: test_student.py
