[tool.poetry]
name = "demo-cli"
version = "0.1.0"
description = ""
authors = ["tomek <t-krzywicki@wp.pl>"]
readme = "README.md"
packages = [{include = "demo_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
phonenumbers = "^8.13.5"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.1.20"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.2"
flake8-polyfill = "^1.0.2"
flake8-quotes = "^3.3.2"
pytest = "^7.2.1"
black = "^23.1.0"
sphinx = "^6.1.3"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.black]
skip-string-normalization = true
max-line-length = 130

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
